changing the schedule

--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -26,7 +26,8 @@ class="bg-light-gray"
             </tr>
             <tr>
               <th scope="row">09:30 - 10:30</th>
-              <td colspan="2"><b>Keynote</b><br><i>Des données brutes aux insights / Drawing insights from raw data</i></td>
+              <td colspan="2"><b>Keynote</b><br><i>L’intérêt de la modélisation bayesienne / The interest of Bayesian modeling</i></td>
+              <td colspan="2"><b><i>Bruno Herault</i></b></td>
             </tr>
             <tr>
               <th scope="row">10:30 - 11:00</th>
