adding speaker ad

--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -50,7 +50,10 @@ class="bg-light-gray"
             </tr>
             <tr>
               <th scope="row">13:30 - 14:15</th>
-              <td colspan="2"><i>Analyse prédictive avec R / Predictive analysis with R</i></td>
+              <td colspan="2"><i>Analyse prédictive avec R / Predictive analysis with R</i>
+                <br>
+                <b><i>Ahmadou Dicko</i></b>
+              </td>
             </tr>
             <tr>
               <th scope="row">14:15 - 15:00</th>
