--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -58,7 +58,7 @@ class="bg-light-gray"
             <tr>
               <th scope="row">14:15 - 15:00</th>
               <td><i>Les test d’hypothèses avec R / Hypthesis testing with R</i></td>
-              <td><i>Selection des variables pour la construction d’un modèle / Feature selection models</i></td>
+              <td><i>Sélection des inputs dans l'apprentissage machine avec R / Feature selection in machine learning with R</i></td>
             </tr>
             <tr>
               <th scope="row">15:00 - 15:30</th>
