upgrade the schedule

--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -26,7 +26,7 @@ class="bg-light-gray"
             </tr>
             <tr>
               <th scope="row">09:30 - 10:30</th>
-              <td colspan="2"><b>Keynote</b><br><i>L’intérêt de la modélisation bayesienne / The interest of Bayesian modeling</i>
+              <td colspan="2"><b>Keynote</b><br><i>L’intérêt de la modélisation bayesienne <br> The interest of Bayesian modeling</i>
                 <br>
                 <b><i>Bruno Herault</i></b>
               </td>
@@ -37,12 +37,12 @@ class="bg-light-gray"
             </tr>
             <tr>
               <th scope="row">11:00 - 11:45</th>
-              <td colspan="2"><i>Manipulation des données avec dplyr / Data wrangling with dplyr</i></td>
+              <td colspan="2"><i>Manipulation des données avec dplyr <br> Data wrangling with dplyr</i></td>
             </tr>
             <tr>
               <th scope="row">11:45 - 12:30</th>
-              <td><i>Visualisation des données avec ggplot2 / Data visualization with ggplot2</i></td>
-              <td><i>Visualisation des données spatiales / Spatial data visualization</i></td>
+              <td><i>Visualisation des données avec ggplot2 <br> Data visualization with ggplot2</i></td>
+              <td><i>Visualisation des données spatiales <br> Spatial data visualization</i></td>
             </tr>
             <tr>
               <th scope="row">12:30 - 13:30</th>
@@ -50,15 +50,15 @@ class="bg-light-gray"
             </tr>
             <tr>
               <th scope="row">13:30 - 14:15</th>
-              <td colspan="2"><i>Analyse prédictive avec R / Predictive analysis with R</i>
+              <td colspan="2"><i>Analyse prédictive avec R <br> Predictive analysis with R</i>
                 <br>
                 <b><i>Ahmadou Dicko</i></b>
               </td>
             </tr>
             <tr>
               <th scope="row">14:15 - 15:00</th>
-              <td><i>Les test d’hypothèses avec R / Hypthesis testing with R</i></td>
-              <td><i>Sélection des inputs dans l'apprentissage machine avec R / Feature selection in machine learning with R</i></td>
+              <td><i>Les test d’hypothèses avec R <br> Hypthesis testing with R</i></td>
+              <td><i>Sélection des inputs dans l'apprentissage machine avec R <br> Feature selection in machine learning with R</i></td>
             </tr>
             <tr>
               <th scope="row">15:00 - 15:30</th>
@@ -66,12 +66,12 @@ class="bg-light-gray"
             </tr>
             <tr>
               <th scope="row">15:30 - 16:15</th>
-              <td colspan="2"><i>Rmarkdown: Recherche reproductible et automatisée / R markdown: Reproducible research and automated reporting</i></td>
+              <td colspan="2"><i>Rmarkdown: Recherche reproductible et automatisée <br> R markdown: Reproducible research and automated reporting</i></td>
             </tr>
             <tr>
               <th scope="row">16:15 - 17:00</th>
-              <td><i>Deep learning avec R / Deep learning in R</i></td>
-              <td><i>Développer une application web avec Shiny / Building web app with Shiny</i></td>
+              <td colspan="1"><i>Deep learning avec R <br> Deep learning in R</i></td>
+              <td colspan="1"><i>Développer une application web avec Shiny <br> Building web app with Shiny</i></td>
             </tr>
             <tr>
               <th scope="row">17:00 - 17:15</th>
