--- a/static/css/satrday.css
+++ b/static/css/satrday.css
@@ -1,5 +1,9 @@
 /* Colours work */
 
+.clients > div:nth-child(1) > a:nth-child(4) {
+    align: center;
+}
+
 header {
     color: white;
     background-position: center left;
