--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -23,6 +23,6 @@
 
     </div>
     <br>
-        <a class="btn btn-primary" href="docs/sponsoring.zip" role="button" download>Become a sponsors</a>
+        <a class="btn btn-info sponsors" href="docs/sponsoring.zip" role="button" download>Become a sponsors</a>
   </div>
 </aside>
