--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -80,7 +80,7 @@ class="bg-light-gray"
           </tbody>
         </table>
         <br>
-        <a class="btn btn-primary" href="docs/schedule.pdf" role="button" download>Download the schedule</a>
+        <a class="btn btn-info" href="docs/schedule.pdf" role="button" download>Download the schedule</a>
       </div>
     </div>
 </section>
