--- a/static/css/satrday.css
+++ b/static/css/satrday.css
@@ -1,7 +1,7 @@
 /* Colours work */
 
-.clients > div:nth-child(1) > a:nth-child(4) {
-    align: center;
+.sponsors {
+    text-align: center;
 }
 
 header {
