--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -22,7 +22,6 @@
       {{ end }}
 
     </div>
-    <br>
-        <a class="btn btn-info sponsors" href="docs/sponsoring.zip" role="button" download>Become a sponsors</a>
+    	<a class="btn btn-info text-center" href="docs/sponsoring.zip" role="button" download>Become a sponsors</a>
   </div>
 </aside>
