again again css

--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -22,6 +22,8 @@
       {{ end }}
 
     </div>
-    	<a class="btn btn-info text-center" href="docs/sponsoring.zip" role="button" download>Become a sponsors</a>
+    <div class="col-lg-12 text-center">
+    	<a class="btn btn-info" href="docs/sponsoring.zip" role="button" download>Become a sponsors</a>
+    </div>
   </div>
 </aside>
