--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -21,57 +21,63 @@ class="bg-light-gray"
           </thead>
           <tbody>
             <tr>
-              <th scope="row">09:00 - 09:30</th>
+              <th scope="row">08:30 - 09:00</th>
               <td colspan="2"><b>Ouverture / Opening</b><br><i><b>Comite d'organisation / Organising comitee</b></i></td>
             </tr>
             <tr>
-              <th scope="row">09:30 - 10:30</th>
-              <td colspan="2"><b>Keynote</b><br><i>L’intérêt de la modélisation bayesienne <br> The interest of Bayesian modeling</i>
+              <th scope="row">09:00 - 09:50</th>
+              <td colspan="2"><b>Keynote 1</b><br><i>L’intérêt de la modélisation bayesienne <br> The interest of Bayesian modeling</i>
                 <br>
                 <b><i>Bruno Herault</i></b>
               </td>
             </tr>
             <tr>
-              <th scope="row">10:30 - 11:00</th>
+              <th scope="row">09:50 - 11:20</th>
+              <td colspan="2"><b>Atelier / Workshop</b><br><i>Visualisation et Manipulation des données dans R <br> Visualize and transform your data in R</i>
+              <b><i>Anicet Ebou</i></b>
+              </td>
+            </tr>
+	    <tr>
+              <th scope="row">11:20 - 11:35</th>
+              <td colspan="2"><i>Présentation de la plateforme zindi.africa <br> Presentation of zindi.africa </i>
+              <b><i>Fabrice Sonzahi</i></b>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">11:35 - 12:05</th>
               <td colspan="2"><b>Pause café / Coffee break</b></td>
             </tr>
             <tr>
-              <th scope="row">11:00 - 11:45</th>
-              <td colspan="2"><i>Manipulation des données avec dplyr <br> Data wrangling with dplyr</i></td>
-            </tr>
-            <tr>
-              <th scope="row">11:45 - 12:30</th>
-              <td><i>Visualisation des données avec ggplot2 <br> Data visualization with ggplot2</i></td>
-              <td><i>Visualisation des données spatiales <br> Spatial data visualization</i></td>
-            </tr>
-            <tr>
-              <th scope="row">12:30 - 13:30</th>
-              <td colspan="2"><b>Pause Déjeuner / Lunch Break</b></td>
-            </tr>
-            <tr>
-              <th scope="row">13:30 - 14:15</th>
-              <td colspan="2"><i>Analyse prédictive avec R <br> Predictive analysis with R</i>
+              <th scope="row">12:05 - 12:55</th>
+              <td colspan="2"><b>Keynote 2</b><br><i>Analyse prédictive avec R <br> Predictive analysis with R</i>
                 <br>
                 <b><i>Ahmadou Dicko</i></b>
               </td>
             </tr>
             <tr>
-              <th scope="row">14:15 - 15:00</th>
-              <td><i>Les test d’hypothèses avec R <br> Hypthesis testing with R</i></td>
-              <td><i>Sélection des inputs dans l'apprentissage machine avec R <br> Feature selection in machine learning with R</i></td>
+              <th scope="row">12:55 - 13:25</th>
+              <td colspan="2"><i>Les test d’hypothèses avec R <br> Hypthesis testing with R</i>
+              	<br>
+              	<b><i>Luc Quenum</i></b>
+              </td>
             </tr>
             <tr>
-              <th scope="row">15:00 - 15:30</th>
+              <th scope="row">13:25 - 14:00</th>
+              <td colspan="2"><i>Conduire une analyse reproductible dans l'environnement R <br> Reproducible analysis in R environment </i>
+              	<br>
+              	<b><i>Anicet Ebou</i></b>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">14:00 - 14:30</th>
               <td colspan="2"><b>Pause café / Coffee break</b></td>
             </tr>
             <tr>
-              <th scope="row">15:30 - 16:15</th>
-              <td colspan="2"><i>Rmarkdown: Recherche reproductible et automatisée <br> R markdown: Reproducible research and automated reporting</i></td>
-            </tr>
-            <tr>
-              <th scope="row">16:15 - 17:00</th>
-              <td colspan="1"><i>Deep learning avec R <br> Deep learning in R</i></td>
-              <td colspan="1"><i>Développer une application web avec Shiny <br> Building web app with Shiny</i></td>
+              <th scope="row">14:30 - 15:00</th>
+              <td colspan="2"><i>Développer une application web avec Shiny <br> Building web app with Shiny</i>
+              	<br>
+              	<b><i>Anicet Ebou</i></b>
+              </td>
             </tr>
             <tr>
               <th scope="row">17:00 - 17:15</th>
@@ -80,7 +86,7 @@ class="bg-light-gray"
           </tbody>
         </table>
         <br>
-        <a class="btn btn-info" href="docs/schedule.pdf" role="button" download>Download the schedule</a>
+        <a class="btn btn-info" href="docs/2020-01-17_schedule.pdf" role="button" download>Download the schedule</a>
       </div>
     </div>
 </section>
