Add talks slides

--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -88,7 +88,7 @@ class="bg-light-gray"
           </tbody>
         </table>
         <br>
-        <a class="btn btn-info" href="docs/2020-01-17_schedule.pdf" role="button" download>Download the schedule</a>
+        <a class="btn btn-info" href="docs/talks-slides.zip" role="button" download>talks slides</a>
       </div>
     </div>
 </section>
